Fixed CORS and made news display

--- a/backend/NewsAPI.ipynb
+++ b/backend/NewsAPI.ipynb
@@ -57,7 +57,7 @@
         }
       ],
       "source": [
-        "!pip install pyngrok worldnewsapi"
+        "!pip install pyngrok worldnewsapi flask-cors"
       ]
     },
     {
@@ -219,7 +219,7 @@
         "    load_in_4bit = load_in_4bit,\n",
         ")\n",
         "\n",
-        "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+        "prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
         "\n",
         "### Instruction:\n",
         "{}\n",
@@ -242,7 +242,7 @@
         "def summarize(text):\n",
         "    inputs = tokenizer(\n",
         "    [\n",
-        "        alpaca_prompt.format(\n",
+        "        prompt.format(\n",
         "            \"Summarize the following news\", # instruction\n",
         "            text,\n",
         "            \"\", # output\n",
@@ -267,6 +267,7 @@
         "from datetime import date, timedelta\n",
         "from flask import Flask, jsonify\n",
         "from pyngrok import ngrok\n",
+        "from flask_cors import CORS\n",
         "from dotenv import load_dotenv"
       ]
     },
@@ -366,10 +367,11 @@
         "            summarized_text = summarize(article.text)\n",
         "            all_results.append({\n",
         "                \"Title\": article.title,\n",
-        "                \"Author\": article.author,\n",
+        "                \"Author\": article.authors[0],\n",
         "                \"URL\": article.url,\n",
         "                \"Text\": summarized_text,\n",
-        "                \"Image\": article.image\n",
+        "                \"Image\": article.image,\n",
+        "                \"Date\": article.publish_date,\n",
         "            })\n",
         "\n",
         "        offset += 100\n",
@@ -425,6 +427,7 @@
       ],
       "source": [
         "app = Flask(__name__)\n",
+        "CORS(app, resources={r\"/*\": {\"origins\": \"http://localhost:8081\"}})\n",
         "current_index = 0\n",
         "\n",
         "@app.route('/', methods=['GET'])\n",
@@ -440,11 +443,12 @@
         "    return jsonify(article)\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    !ngrok authtoken AUTH_TOKEN\n",
+        "    from pyngrok import ngrok\n",
+        "\n",
+        "    ngrok.set_auth_token(\"2hEtOtC3wusDPAHsZtnWRruPURa_5ZbFmEyTHeFT1Q1fstPNp\")\n",
         "\n",
         "    public_url = ngrok.connect(5000)\n",
         "    print(f\"ngrok tunnel opened at {public_url}\")\n",
-        "\n",
         "\n",
         "    app.run()"
       ]
