--- a/backend/NewsAPI.ipynb
+++ b/backend/NewsAPI.ipynb
@@ -445,7 +445,7 @@
         "if __name__ == '__main__':\n",
         "    from pyngrok import ngrok\n",
         "\n",
-        "    ngrok.set_auth_token(\"2hEtOtC3wusDPAHsZtnWRruPURa_5ZbFmEyTHeFT1Q1fstPNp\")\n",
+        "    ngrok.set_auth_token(AUTH_TOKEN)\n",
         "\n",
         "    public_url = ngrok.connect(5000)\n",
         "    print(f\"ngrok tunnel opened at {public_url}\")\n",
